rust/src/nasl/interpreter/tests/snapshots/scannerlib__nasl__interpreter__tests__array_out_of_range.snap
---
source: src/nasl/interpreter/tests/mod.rs
expression: "crate :: nasl :: interpreter :: tests ::\ninterpret_err(stringify! (array_out_of_range), \"a = [1, 2, 3]; a[3];\")"
---
error: Array out of range for index: 3
  ┌─ array_out_of_range:1:16
  │
1 │ a = [1, 2, 3]; a[3];
  │                ^ Array out of range for index: 3
